--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,10 @@
     letter-spacing: 0.03em;
     text-align: left;
     color: var(--mane-text-cl);
-    
+  }
+
+  li {
+    list-style-type: none;
   }
 
   .logo {
