--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@
   body {
     font-family: "Roboto", sans-serif;
     font-size: 14px;
-    line-height: 1,71;
+    line-height: 1.71;
     letter-spacing: 0.03em;
     text-align: left;
     color: var(--mane-text-cl);
@@ -76,7 +76,7 @@
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1,19;    
+    line-height: 1.19;    
     color: var(--accent-cl);
     text-decoration: none;
   }
@@ -88,7 +88,7 @@
   
   .link {
     font-weight: 500;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--blek);
     text-decoration: none;
@@ -102,7 +102,7 @@
     text-decoration: none;
     font-weight: 500;
     font-style: normal;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: var(--mane-text-cl);
   }
@@ -126,7 +126,7 @@
   .title-heroy {
     font-weight: 900;
     font-size: 44px;
-    line-height: 1,36x;
+    line-height: 1.36;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
@@ -148,7 +148,7 @@
   .cection-title {
     font-weight: 700;
     font-size: 36px;
-    line-height: 1,17;
+    line-height: 1.17;
     text-align: center;
     color: var(--blek);
   }
@@ -156,14 +156,15 @@
   .representation-title {
     font-weight: 700;
     font-size: 14px;
-    line-height: 11,14;
+    line-height: 1.14;
     text-transform: uppercase;
+    color: var(--blek);
   }
 
   .name-worker {
     font-weight: 500;
     font-size: 16px;
-    line-height: 1,19;
+    line-height: 1.19;
     text-align: center;
     color: var(--blek);
   }
@@ -171,14 +172,14 @@
   .prof-worker {
     font-weight: 400;
     font-size: 16px;
-    line-height: 1,19;
+    line-height: 1.19;
     text-align: center;
   }
 
   .button {
     font-weight: 700;
     font-size: 16px;
-    line-height: 1,87;
+    line-height: 1.87;
     text-align: center;
     letter-spacing: 0.06em;
     color: #FFFFFF;
@@ -187,7 +188,7 @@
 .menu-portfolio {
   font-weight: 500;
   font-size: 16px;
-  line-height: 1,62;
+  line-height: 1.62;
   text-align: center;
   color: var(--blek);
   background-color: var(--white);
@@ -210,5 +211,5 @@
 
 .type-proekt {
   font-size: 16px;
-  line-height: 1,87;
+  line-height: 1.87;
 }
